--- a/index.html
+++ b/index.html
@@ -123,6 +123,24 @@
         <!-- ======= Get Started Section ======= -->
         <section id="get-started" class="get-started section-bg">
             <div class="container">
+                <div class="our-story">
+                            <h4>Est 2019</h4>
+                            <h3>Notre histoire</h3>
+                            <p>Solutionneur Service est une entreprise multidisciplinaires, qui as etait crée par des etudiants de differents faculter, en vus d'offrire un services de renovation total de vos appartements, Bureau, hotel,etc L'equipe solutionneur
+                                a eu a participer à plusieur concourt des jeunes entrepreuneur, et notre equipe s'est distingué grace a leur bravour, on as etait parmis les 5 entreprises qui gagnat du concoourt organiser par la CDR, la FEC et ENABEL,
+                                on as eu a traviller sur plusieurs projet et jousqu'aujourd'hui <strong>SOLUTIONNEUR</strong> n'as <strong>JAMAIS</strong> eu d'echec dans ses projets qu'il as eu a travailler avec ses Clients. c'est sa notre petite histoire
+                            </p>
+                            <!--    <ul>
+                                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
+                                <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
+                                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
+                            </ul> -->
+                            <p>Faite un bon choix pour vos projets de construction et de rénovation et vous ne serez pas déçu</p>
+
+                            <!-- <div class="watch-video d-flex align-items-center position-relative">
+                                <i class="bi bi-play-circle"></i>
+                           -->
+                        </div>
 
                 <div class="row justify-content-between gy-4">
 
