--- a/index.html
+++ b/index.html
@@ -871,7 +871,7 @@
                         <div class="footer-info">
                             <h3>Solutionneur service</h3>
                             <p>
-                                Lubumbashi<br> L'shi 7010, RDC<br><br>
+                                Lubumbashi<br> Av/kapenda coin mobutu. Ref ancien batiment Megastore L'shi 7010, RDC<br><br>
                                 <strong>Phone:</strong> +243-973-933-073<br>
                                 <strong>Email:</strong> contact@solutionneur.services<br>
                             </p>
