--- a/index.html
+++ b/index.html
@@ -126,10 +126,11 @@
                 <div class="our-story">
                             <h4>Est 2019</h4>
                             <h3>Notre histoire</h3>
-                            <p>Solutionneur Service est une entreprise multidisciplinaires, qui as etait crée par des etudiants de differents faculter, en vus d'offrire un services de renovation total de vos appartements, Bureau, hotel,etc L'equipe solutionneur
-                                a eu a participer à plusieur concourt des jeunes entrepreuneur, et notre equipe s'est distingué grace a leur bravour, on as etait parmis les 5 entreprises qui gagnat du concoourt organiser par la CDR, la FEC et ENABEL,
-                                on as eu a traviller sur plusieurs projet et jousqu'aujourd'hui <strong>SOLUTIONNEUR</strong> n'as <strong>JAMAIS</strong> eu d'echec dans ses projets qu'il as eu a travailler avec ses Clients. c'est sa notre petite histoire
+                            <p><strong>SOLUTIONNEUR-SERVICE</strong> est une entreprise multidisciplinaire, qui a été créée par des etudiants de differentes facultés, en vue d'offrir un service de renovation total de vos appartements, bureaux, hotels,etc L'équipe <strong>SOLUTIONNEUR</strong>
+                                a eu à participer à plusieurs concourts de jeunes entrepreneurs, et notre équipe s'est distinguée grâce à leur bravour. Nous avons été parmis les 5 entreprises gagnantes du concourt organisé par la CDR, la FEC et ENABEL.
+                                Nous avons eu à traviller sur plusieurs projets et jusqu'aujourd'hui, <strong>SOLUTIONNEUR</strong> n'as <strong>JAMAIS</strong> essuyé d'échec dans ses projets qu'elle a eu à traiter avec ses Clients.
                             </p>
+
                             <!--    <ul>
                                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
                                 <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
