--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                                 <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
                                 <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
                             </ul> -->
-                            <p>Faite un bon choix pour vos projets de construction et de rénovation et vous ne serez pas déçu</p>
+                            <p>Faites un bon choix pour vos projets de construction et de rénovation et vous ne serez pas déçu.</p>
 
                             <!-- <div class="watch-video d-flex align-items-center position-relative">
                                 <i class="bi bi-play-circle"></i>
