--- a/index.html
+++ b/index.html
@@ -883,6 +883,10 @@
                                 <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
                             </div> -->
                         </div>
+                        <div class="credits">
+                    
+                            Pour votre devis écrivez nous sur : <a href="mailto:contact@solutionneur.services">Solutionneur-service</a>
+                        </div>
                     </div>
                     <!-- End footer info column-->
 
