--- a/index.html
+++ b/index.html
@@ -885,7 +885,7 @@
                         </div>
                         <div class="credits">
                     
-                            Pour votre devis écrivez nous sur : <a href="mailto:contact@solutionneur.services">Solutionneur-service</a>
+                            Pour votre devis appuyez : <a href="mailto:contact@solutionneur.services">ICI</a>
                         </div>
                     </div>
                     <!-- End footer info column-->
