--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-6 text-center">
                         <h2 data-aos="fade-down">Bienvenue chez <span>solutionneur</span></h2>
-                        <p data-aos="fade-up">On est une entreprise de renovation, on est a votre services pour transformer votre espace de vie en une merveille.</p>
+                        <p data-aos="fade-up">Nous sommes une entreprise de rénovation, à votre service pour transformer votre espace de vie en une merveille.</p>
                         <a data-aos="fade-up" data-aos-delay="200" href="#get-started" class="btn-get-started">commencer</a>
                     </div>
                 </div>
