--- a/index.html
+++ b/index.html
@@ -126,9 +126,9 @@
                 <div class="our-story">
                             <h4>Est 2019</h4>
                             <h3>Notre histoire</h3>
-                            <p><strong>SOLUTIONNEUR-SERVICE</strong> est une entreprise multidisciplinaire, qui a été créée par des etudiants de differentes facultés, en vue d'offrir un service de renovation total de vos appartements, bureaux, hotels,etc L'équipe <strong>SOLUTIONNEUR</strong>
-                                a eu à participer à plusieurs concourts de jeunes entrepreneurs, et notre équipe s'est distinguée grâce à leur bravour. Nous avons été parmis les 5 entreprises gagnantes du concourt organisé par la CDR, la FEC et ENABEL.
-                                Nous avons eu à traviller sur plusieurs projets et jusqu'aujourd'hui, <strong>SOLUTIONNEUR</strong> n'as <strong>JAMAIS</strong> essuyé d'échec dans ses projets qu'elle a eu à traiter avec ses Clients.
+                            <p><strong>SOLUTIONNEUR-SERVICE</strong> est une entreprise multidisciplinaire, qui a été créée par des étudiants de différentes facultés, en vue d'offrir un service de rénovation total de vos appartements, bureaux, hotels,etc L'équipe <strong>SOLUTIONNEUR</strong>
+                                a eu à participer à plusieurs concourts de jeunes entrepreneurs, et notre équipe s'est distinguée par sa bravour. Nous avons été parmis les 5 entreprises gagnantes du concourt organisé par la CDR, la FEC et ENABEL.
+                                Nous avons eu à travailler sur plusieurs projets et jusqu'à aujourd'hui, <strong>SOLUTIONNEUR</strong> n'a <strong>JAMAIS</strong> essuyé d'échec dans les projets qu'elle a eu à traiter avec ses clients.
                             </p>
 
                             <!--    <ul>
