--- a/service-details.html
+++ b/service-details.html
@@ -30,12 +30,7 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: UpConstruction - v1.0.0
-  * Template URL: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
+    
 </head>
 
 <body>
@@ -91,7 +86,7 @@
         <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
             <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-                <h2>Service Details</h2>
+                <h2>Details de Service</h2>
                 <ol>
                     <li><a href="index.html">Acceuil</a></li>
                     <li>Service Details</li>
@@ -112,20 +107,17 @@
                             <a href="assets/img/archi4.png" class="active">conception de plan</a>
                             <a href="assets/img/sol37.jpg">Construction</a>
                             <a href="assets/img/Poster-2.jpg">Peinture</a>
-                            <a href="assets/img/Moq1.jpeg">Electricite</a>
+                            <a href="assets/img/Moq1.jpeg">Electricité</a>
                             <a href="assets/img/plomb.jpeg">Plomberie</a>
 
                         </div>
 
                         <h4>Pourquoi nous choisir nous?</h4>
-                        <p>Voici quelque raisons et precision sur nos offres de service:</p>
+                        <p>Voici quelques précisions sur nos offres de service:</p>
                     </div>
 
                     <div class="col-lg-8">
                         <img src="assets/img/Casque-2.jpg" alt="" class="img-fluid services-img">
-                        <p>
-                            ICI nous avons precisé tous nos services pour vous faire comprendre l'importance de tout ce points dans votre maison ou appartements
-                        </p>
                         <ul>
                             <img src="assets/img/archi4.png" alt="" class="img-fluid services-img">
                             <li><i class="bi bi-check-circle"></i> <span>Nous concevons des plans de maisons selons vos demandes et aussi vous proposez nos plans pour que vous puissiez faire votre choix. Grace a notre Équipe des architectes nous vous fournissons des plans a la norme modernisée</span></li>
@@ -141,9 +133,6 @@
 
 
                         </ul>
-                        <p>
-                            Ceci est nos services en detail alors faite nous confiance vous ne serez pas déçu
-                        </p>
                         <p>
 
                         </p>
@@ -186,7 +175,7 @@
                     <div class="col-lg-2 col-md-3 footer-links">
                         <h4> </h4>
                         <ul>
-                            <li><a href="index.html">Maison</a></li>
+                            <li><a href="index.html">Acceuil</a></li>
                             <li><a href="about.html">À propos de nous</a></li>
                             <li><a href="services.html">Nos Services</a></li>
                             <!-- <li><a href="contact.html">Contact</a></li> -->
