--- a/about.html
+++ b/about.html
@@ -66,10 +66,10 @@
         <div class="breadcrumbs d-flex align-items-center" style="background-image: url('assets/img/breadcrumbs-bg.jpg');">
             <div class="container position-relative d-flex flex-column align-items-center" data-aos="fade">
 
-                <h2>À propos de</h2>
+                <h2>À propos de nous</h2>
                 <ol>
-                    <li><a href="index.html">Maison</a></li>
-                    <li>À propos de</li>
+                    <li><a href="index.html">Acceuil</a></li>
+                    <li>À propos de nous</li>
                 </ol>
 
             </div>
@@ -89,9 +89,9 @@
                         <div class="our-story">
                             <h4>Est 2019</h4>
                             <h3>Notre histoire</h3>
-                            <p><strong>SOLUTIONNEUR-SERVICE</strong> est une entreprise multidisciplinaire, qui a été créée par des etudiants de differentes facultés, en vue d'offrir un service de renovation total de vos appartements, bureaux, hotels,etc L'équipe <strong>SOLUTIONNEUR</strong>
-                                a eu à participer à plusieurs concourts de jeunes entrepreneurs, et notre équipe s'est distinguée grâce à leur bravour. Nous avons été parmis les 5 entreprises gagnantes du concourt organisé par la CDR, la FEC et ENABEL.
-                                Nous avons eu à traviller sur plusieurs projets et jusqu'aujourd'hui, <strong>SOLUTIONNEUR</strong> n'as <strong>JAMAIS</strong> essuyé d'échec dans ses projets qu'elle a eu à traiter avec ses Clients.
+                            <p><strong>SOLUTIONNEUR-SERVICE</strong> est une entreprise multidisciplinaire, qui a été créée par des étudiants de différentes facultés, en vue d'offrir un service de rénovation total de vos appartements, bureaux, hotels,etc L'équipe <strong>SOLUTIONNEUR</strong>
+                                a eu à participer à plusieurs concourts de jeunes entrepreneurs, et notre équipe s'est distinguée par sa bravour. Nous avons été parmis les 5 entreprises gagnantes du concourt organisé par la CDR, la FEC et ENABEL.
+                                Nous avons eu à travailler sur plusieurs projets et jusqu'à aujourd'hui, <strong>SOLUTIONNEUR</strong> n'a <strong>JAMAIS</strong> essuyé d'échec dans les projets qu'elle a eu à traiter avec ses clients.
                             </p>
                             
                             <!--    <ul>
@@ -221,7 +221,7 @@
                 <div class="row justify-content-around gy-4">
                     <div class="col-lg-5 d-flex flex-column justify-content-center">
                         <h3>Voici Nos Services</h3>
-                        <p>Chez solutionneur nous vous offront des services de qualiter dans les domaines suivants: </p>
+                        <p>Chez <strong>SOLUTIONNEUR</strong> nous vous offrons des services de qualité dans les domaines suivants: </p>
 
                         <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
                             <i class="bi bi-easel flex-shrink-0"></i>
@@ -291,8 +291,8 @@
                         </div>
                         <div class="member-info text-center">
                             <h4>JONATHAN TSHISHI</h4>
-                            <span>CEO/Directeur General</span>
-                            <p>Une bonne équipe c'est un bon leaderchip</p>
+                            <span>CEO/Directeur Général</span>
+                            <p>Une bonne équipe c'est un bon leadership.</p>
                         </div>
                     </div>
                     <!-- End Team Member -->
@@ -309,8 +309,8 @@
                         </div>
                         <div class="member-info text-center">
                             <h4>PATRICK BUKASA</h4>
-                            <span>CEO/Directeur des operations/Electricien</span>
-                            <p>Un travail bien fini et avec une bonne qualité c'est mon devoir</p>
+                            <span>CEO/Directeur des opérations/Electricien</span>
+                            <p>"Un travail bien fait et de bonne qualité" c'est mon devoir.</p>
                         </div>
                     </div>
                     <!-- End Team Member -->
@@ -328,7 +328,7 @@
                         <div class="member-info text-center">
                             <h4>GENESIS MALITELE</h4>
                             <span>CEO/Directeur financier</span>
-                            <p>Tout traité avec sagesse fait parti de nos souhaits</p>
+                            <p>Tout traiter avec sagesse fait parti de nos souhaits.</p>
                         </div>
                     </div>
                     <!-- End Team Member -->
@@ -345,8 +345,8 @@
                         </div>
                         <div class="member-info text-center">
                             <h4>GLOIRE KANDHE</h4>
-                            <span>Directeur de la marketing et relation publique</span>
-                            <p>On ne peut convaicre nos clients que par nos oeuvres et notre détermination</p>
+                            <span>Directeur marketing et relation publique</span>
+                            <p>On ne peut convaincre nos clients que par nos oeuvres et notre détermination.</p>
                         </div>
                     </div>
                     <!-- End Team Member -->
@@ -363,8 +363,8 @@
                         </div>
                         <div class="member-info text-center">
                             <h4>IRISH ILUNGA</h4>
-                            <span>Directeur de resources humaines</span>
-                            <p>De l'ordinaire a l'extraordinaire. c'est notre devise</p>
+                            <span>Directeur des ressources humaines</span>
+                            <p>"De l'ordinaire à l'extraordinaire" c'est notre devise.</p>
                         </div>
                     </div>
                     <!-- End Team Member -->
@@ -382,7 +382,7 @@
                         <div class="member-info text-center">
                             <h4>FERNAND KALOMBO</h4>
                             <span>Architecte</span>
-                            <p>On dit qu'un architecte n'est pas intelligent, mais il vous fournis de oeuvre d'art qui dépasse l'intelligence des genies.</p>
+                            <p>On dit qu'un architecte n'est pas intelligent, mais il vous fournit des oeuvres d'art qui dépassent l'intelligence des génies.</p>
                         </div>
                     </div>
                     <!-- End Team Member -->
