--- a/services.html
+++ b/services.html
@@ -30,14 +30,6 @@
     <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
 
-    <!-- =======================================================
-  * Template Name: UpConstruction - v1.0.0
-  * Template URL: https://bootstrapmade.com/upconstruction-bootstrap-construction-website-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-</head>
-
 <body>
 
     <!-- ======= Header ======= -->
@@ -106,8 +98,6 @@
                 <div class="row justify-content-around gy-4">
                     <div class="col-lg-5 d-flex flex-column justify-content-center">
                         <h3>Services</h3>
-                        <p>Voici les services que solutionneur services vous offre</p>
-
                         <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="100">
                             <i class="bi bi-easel flex-shrink-0"></i>
                             <div>
@@ -353,7 +343,7 @@
                                     <h3>SAMY MWAMBA</h3>
                                     <h4>Designer</h4>
                                     <div class="stars">
-                                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                                        <i class="bi bi-star-fill"></i></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                                     </div>
                                     <p>
                                         <i class="bi bi-quote quote-icon-left"></i> Les travaux ont été fait dans un temps raisonnable Ils ont respectés leurs soumission et il n'y a pas eu de surprise
@@ -371,7 +361,7 @@
                                     <h3>IDRIS BUKASA</h3>
 
                                     <div class="stars">
-                                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                                        <i class="bi bi-star-fill"></i></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                                     </div>
                                     <p>
                                         <i class="bi bi-quote quote-icon-left"></i> Un entrepreneur très professionnel, soucieux du détail avec un excellent service. Je vous le suggère !
@@ -389,7 +379,7 @@
                                     <h3>Yannick mwila</h3>
 
                                     <div class="stars">
-                                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                                     </div>
                                     <p>
                                         <i class="bi bi-quote quote-icon-left"></i> Ils ont fait un travail de rénovation dans notre cuisine. Ils ont aussi fait un design de sous-sol sur mesure. Nous avons été agréablement interpellé par le sentiment
@@ -408,7 +398,7 @@
                                     <h3>Eben matongo</h3>
                                     <h4>Entrepreneur</h4>
                                     <div class="stars">
-                                        <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
+                                        <i class="bi bi-star-fill"></i></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                                     </div>
                                     <p>
                                         <i class="bi bi-quote quote-icon-left"></i> Une belle équipe de professionnels. Des gens qui connaissent leurs produits et qui ont su nous guider dans les différents choix à faire, autant au niveau des matériaux
