--- a/index.html
+++ b/index.html
@@ -52,25 +52,7 @@
                     <li><a href="index.html" class="active">acceuil</a></li>
                     <li><a href="about.html">A propos de nous</a></li>
                     <li><a href="services.html">Nos Services</a></li>
-                    <!--<li><a href="projects.html">Projects</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-            <ul>
-              <li><a href="#">Dropdown 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                <ul>
-                  <li><a href="#">Deep Dropdown 1</a></li>
-                  <li><a href="#">Deep Dropdown 2</a></li>
-                  <li><a href="#">Deep Dropdown 3</a></li>
-                  <li><a href="#">Deep Dropdown 4</a></li>
-                  <li><a href="#">Deep Dropdown 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Dropdown 2</a></li>
-              <li><a href="#">Dropdown 3</a></li>
-              <li><a href="#">Dropdown 4</a></li>
-            </ul> -->
-                    </li>
+                   
                     <!-- <li><a href="contact.html">Contact</a></li> -->
                 </ul>
             </nav>
@@ -130,17 +112,9 @@
                                 a eu à participer à plusieurs concourts de jeunes entrepreneurs, et notre équipe s'est distinguée par sa bravour. Nous avons été parmis les 5 entreprises gagnantes du concourt organisé par la CDR, la FEC et ENABEL.
                                 Nous avons eu à travailler sur plusieurs projets et jusqu'à aujourd'hui, <strong>SOLUTIONNEUR</strong> n'a <strong>JAMAIS</strong> essuyé d'échec dans les projets qu'elle a eu à traiter avec ses clients.
                             </p>
-
-                            <!--    <ul>
-                                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea commo</span></li>
-                                <li><i class="bi bi-check-circle"></i> <span>Duis aute irure dolor in reprehenderit in</span></li>
-                                <li><i class="bi bi-check-circle"></i> <span>Ullamco laboris nisi ut aliquip ex ea</span></li>
-                            </ul> -->
                             <p>Faites un bon choix pour vos projets de construction et de rénovation et vous ne serez pas déçu.</p>
 
-                            <!-- <div class="watch-video d-flex align-items-center position-relative">
-                                <i class="bi bi-play-circle"></i>
-                           -->
+                           
                         </div>
 
                 <div class="row justify-content-between gy-4">
@@ -280,7 +254,7 @@
                             <div class="icon">
                                 <i class="fa-solid fa-trowel-bricks"></i>
                             </div>
-                            <h3>Conception complet de plan</h3>
+                            <h3>Conception complete de plan</h3>
                             <p>Faitent nous savoir vos préférence, et nous concevont un plan de votre choix.</p>
                             <a href="service-details.html" class="readmore stretched-link">En savoir plus <i class="bi bi-arrow-right"></i></a>
                         </div>
