--- a/services.html
+++ b/services.html
@@ -49,24 +49,7 @@
                     <li><a href="index.html">Acceuil</a></li>
                     <li><a href="about.html">A Propos de Nous</a></li>
                     <li><a href="services.html" class="active">Services</a></li>
-                    <!--<li><a href="projects.html">Projects</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                        <ul>
-                            <li><a href="#">Dropdown 1</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Dropdown 1</a></li>
-                                    <li><a href="#">Deep Dropdown 2</a></li>
-                                    <li><a href="#">Deep Dropdown 3</a></li>
-                                    <li><a href="#">Deep Dropdown 4</a></li>
-                                    <li><a href="#">Deep Dropdown 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Dropdown 2</a></li>
-                            <li><a href="#">Dropdown 3</a></li>
-                            <li><a href="#">Dropdown 4</a></li>
-                        </ul>
+                    
                     </li>-->
                     <!-- <li><a href="contact.html">Contact</a></li> -->
                 </ul>
@@ -128,7 +111,7 @@
                         <div class="icon-box d-flex position-relative" data-aos="fade-up" data-aos-delay="400">
                             <i class="bi bi-brightness-high flex-shrink-0"></i>
                             <div>
-                                <h4><a href="" class="stretched-link">Conception complet de plan</a></h4>
+                                <h4><a href="" class="stretched-link">Conception complete de plan</a></h4>
                                 <p>Faitent nous savoir vos préférence, et nous concevont un plan de votre choix.</p>
                             </div>
                         </div>
