--- a/service-details.html
+++ b/service-details.html
@@ -22,10 +22,10 @@
     <!-- Vendor CSS Files -->
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-    <!-- <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> -->
-    <!-- <link href="assets/vendor/aos/aos.css" rel="stylesheet"> -->
-    <!-- <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet"> -->
-    <!-- <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
+    <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet"> 
+     <link href="assets/vendor/aos/aos.css" rel="stylesheet"> 
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet"> 
 
     <!-- Template Main CSS File -->
     <link href="assets/css/main.css" rel="stylesheet">
@@ -52,25 +52,7 @@
                     <li><a href="index.html">Acceuil</a></li>
                     <li><a href="about.html">A propos de nous</a></li>
                     <li><a href="services.html">Services</a></li>
-                    <!--    <li><a href="projects.html">Projects</a></li> 
-                    <li><a href="blog.html">Blog</a></li>
-                    <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                        <ul>
-                            <li><a href="#">Dropdown 1</a></li>
-                            <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down dropdown-indicator"></i></a>
-                                <ul>
-                                    <li><a href="#">Deep Dropdown 1</a></li>
-                                    <li><a href="#">Deep Dropdown 2</a></li>
-                                    <li><a href="#">Deep Dropdown 3</a></li>
-                                    <li><a href="#">Deep Dropdown 4</a></li>
-                                    <li><a href="#">Deep Dropdown 5</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Dropdown 2</a></li>
-                            <li><a href="#">Dropdown 3</a></li>
-                            <li><a href="#">Dropdown 4</a></li>
-                        </ul>
-                    </li> -->
+                    
                     <!-- <li><a href="contact.html">Contact</a></li> -->
                 </ul>
             </nav>
@@ -162,12 +144,7 @@
                                 <strong>Phone:</strong> +243-973-933-073<br>
                                 <strong>Email:</strong> contact@solutionneur.services<br>
                             </p>
-                            <!--        <div class="social-links d-flex mt-3">
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-twitter"></i></a>
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-facebook"></i></a>
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-instagram"></i></a>
-                                <a href="#" class="d-flex align-items-center justify-content-center"><i class="bi bi-linkedin"></i></a>
-                            </div> -->
+                            
                         </div>
                     </div>
                     <!-- End footer info column-->
